--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <header>
         Hi, test
     </header>
+    <div>
+        <input id="slider" type="range" min="2" max="64" value="20" onchange="slideValue(this.value)">
+    </div>
+    <div class="slidetext">16 x 16</div>
     <div class="container"></div>
 </body>
 </html>
