Minor JS fixes. Added buttons to HTML file to later run different functions.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <div>
         <input id="slider" type="range" min="2" max="64" value="16" onchange="slideValue(this.value)">
     </div>
+    <div id="buttons">
+        <button id="draw" class="buttons">Draw Mode</button>
+        <button id="erase" class="buttons">Eraser</button>
+        <button id="rainbow" class="buttons">Rainbow Mode</button>
+    </div>
     <div class="slidetext">16 x 16</div>
     <div class="container"></div>
 </body>
