--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <input id="slider" type="range" min="2" max="64" value="16" onchange="slideValue(this.value)">
     </div>
     <div id="buttons">
-        <button id="draw" class="buttons">Draw Mode</button>
-        <button id="erase" class="buttons">Eraser</button>
-        <button id="rainbow" class="buttons">Rainbow Mode</button>
+        <button id="draw" class="buttons active">Draw Mode</button>
+        <button id="erase" class="buttons inactive">Eraser</button>
+        <button id="rainbow" class="buttons inactive">Rainbow Mode</button>
     </div>
     <div class="slidetext">16 x 16</div>
     <div class="container"></div>
