Rearrange divs in the body

--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <script src="app.js" defer></script>
     <title>Etch-a-Sketch</title>
 </head>
 <body>
     <header>
-        Hi, test
+        Etch-A-Sketch
     </header>
-    <div>
+    <div id="slideBox">
         <input id="slider" type="range" min="2" max="64" value="16" onchange="slideValue(this.value)">
     </div>
+    <div class="slidetext">16 x 16</div>
     <div id="buttons">
         <button id="draw" class="buttons active" value="active">Draw Mode</button>
         <button id="erase" class="buttons inactive" value="inactive">Eraser</button>
         <button id="rainbow" class="buttons inactive" value="inactive">Rainbow Mode</button>
     </div>
-    <div class="slidetext">16 x 16</div>
     <div class="container"></div>
 </body>
 </html>
